--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,14 @@
-li {
+td {
 	font-family: 'Gafata', sans-serif;
 	list-style: none;
+	font-size: 1rem;
 }
 
 body {
 font-family: 'Gafata', sans-serif;
 	background-color: #424242;
 }
-]
+img {
+	max-height: 80%;
+	max-width: 80%; 
+}
