--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,22 @@
-td {
-	font-family: 'Gafata', sans-serif;
-	list-style: none;
-	font-size: 1rem;
-}
+/* @import "_reset.scss"; */
+table {
+  font-family: 'Gafata', sans-serif;
+  list-style: none;
+  font-size: 1rem;
+  background: #424242; }
 
 body {
-font-family: 'Gafata', sans-serif;
-	background-color: #424242;
-}
-img {
-	max-height: 80%;
-	max-width: 80%; 
-}
+  font-family: 'Gafata', sans-serif;
+  background-color: #424242; }
+
+table thead {
+  background-color: black; }
+  table thead tr th {
+    color: white;
+    font-size: 1.25rem; }
+
+table tr:nth-of-type(even) {
+  background: #404040; }
+
+table tr td {
+  color: white; }
