--- a/css/styles.scss
+++ b/css/styles.scss
@@ -34,5 +34,6 @@ background: $table-even-row-bg;
 
 table tr td {
 	color: $table-row-font-color;
-	font-size: 0.85rem;
+	font-size: 0.9rem;
+	font-style: bold;
 }
