--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,11 @@ table thead {
   table thead tr th {
     color: white; }
 
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
+
 table tr:nth-of-type(even) {
   background: #404040; }
 
