--- a/css/styles.scss
+++ b/css/styles.scss
@@ -26,7 +26,11 @@ table thead {
 		
 	}
 }
-
+img {
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 table tr:nth-of-type(even) {
 background: $table-even-row-bg;
