--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,6 @@
 table {
   font-family: 'Gafata', sans-serif;
   list-style: none;
-  font-size: 1.2rem;
   background: #424242; }
 
 body {
@@ -12,7 +11,8 @@ body {
 table thead {
   background-color: black; }
   table thead tr th {
-    color: white; }
+    color: white;
+    font-size: 1.2rem; }
 
 img {
   display: block;
